# zynq_llama

./: README.md
hw/blas/: compile_commands.json  hls_config.cfg  sgemm.cpp  tb.cpp  vitis-comp.json
hw/blas/.cache/clangd/index/: test.cpp.5BEF4F76830505E9.idx
hw/blas/blas/: blas.hlscompile_summary  blas.hlsrun_csim_summary  blas.hlsrun_package_summary  hash-map.txt
hw/blas/blas/hls/: config.cmdline  hls_data.json
hw/blas/blas/hls/.debug/: sgemm.protoinst
hw/blas/blas/hls/impl/ip/: component.xml  pack.sh  run_ippack.tcl  sgemm_info.xml  sysgen_info.xml  tmp.xpr  vivado.jou
hw/blas/blas/hls/impl/misc/: sgemm_hadd_16ns_16ns_16_5_full_dsp_1_x_ip.tcl
hw/blas/blas/hls/syn/report/: csynth.xml  (+12 more)
hw/blas/blas/reports/: hls_compile.rpt  hls_impl_pnr.rpt  hls_impl_syn.rpt  v++_compile_blas_guidance.html
hw/blas/blas/reports/.db/: v++_compile_blas_guidance.pb3
hw/vivado/: README.hw  kr260_tsn_rs485pmod.xpr
hw/vivado/kr260_tsn_rs485pmod.ip_user_files/mem_init_files/: psu_init_gpl.h  zynq_ultra_ps_e_tlm.h
hw/vivado/kr260_tsn_rs485pmod.ip_user_files/sim_scripts/kr260_tsn_rs485pmod/activehdl/: CMakeLists.txt  compile.do  kr260_tsn_rs485pmod.sh  sc_xtlm_kr260_tsn_rs485pmod_smartconnect_0_0.mem  simulate.do
llama.cpp/: Makefile  sgemm.cpp  virt.c
llama.cpp/examples/server/: completion.js.hpp  index-new.html.hpp  index.html.hpp  json-schema-to-grammar.mjs.hpp
llama.cpp/firmware/: load.sh  makefile  sgemm.dtbo  sgemm.dtsi
llama.cpp/ggml/src/llamafile/: sgemm.cpp
llama.cpp/sgemm_v1_0/data/: sgemm.mdd
llama.cpp/sgemm_v1_0/src/: xsgemm_linux.c  xsgemm_sinit.c
(+221 files in other folders)
